--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -2,8 +2,29 @@
 <div id="aboutPage">
   <div id="aboutMe">
     <header class="mainHeader"><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
-      <h1>About Me</h1>
+      <section>
+        <article>
+          <h2>Hi I'm Josh Peterson</h2>
+          <h4>I'm a student at DevMountain.</h4>
+          <h4>Honing my Web Development skills.</h4>
+        </article>
+      </section>
     </header>
+    <section class="body">
+      <article>
+        <ul>
+          <li>
+            <h4>GitHub</h4>
+          </li>
+          <li>
+            <h4>Linkedin</h4>
+          </li>
+          <li>
+            <h4>CodeWars</h4>
+          </li>
+        </ul>
+      </article>
+    </section>
   </div>
   <div id="skills">
     <header>
