--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -2,7 +2,28 @@
 	#aboutMe
 		header.mainHeader
 			img(src="https://avatars3.githubusercontent.com/u/16170598?v=3&s=460", alt="A picture of me")
-			h1 About Me
+			section
+				
+				article
+					h2 Hi I'm Josh Peterson
+					h4 I'm a student at DevMountain.
+					h4 Honing my Web Development skills.
+		section.body
+			article
+				ul
+					li
+						h4 GitHub
+					li
+						h4 Linkedin
+					li
+						h4 CodeWars
+
+
+
+
+
+
+
 	#skills
 		header
 			h1 Skills
