--- a/public/css/_about.css
+++ b/public/css/_about.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$trout".
-        on line 18 of _about.scss
+        on line 19 of _about.scss
 
-13: 			justify-content:space-around;
 14: 			align-items:flex-start;
-15: 			img{
-16: 				width:15vw;
-17: 				border-radius:100%;
-18: 				box-shadow:1px 1px 12px $trout;
-19: 			}
-20: 			h1{
-21: 				font-family: 'Julius Sans One', sans-serif;
-22: 								/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1eaaf1+0,1eaaf1+23,99d2ef+86,d7e7ef+100 *\/
-23: 				background: rgb(30,170,241); /* Old browsers *\/
+15: 
+16: 			img{
+17: 				width:15vw;
+18: 				border-radius:100%;
+19: 				box-shadow:1px 1px 12px $trout;
+20: 				border:2px white solid;
+21: 			}
+22: 			h1{
+23: 				font-family: 'Julius Sans One', sans-serif;
+24: 				background:$op-blue;
 
 Backtrace:
-_about.scss:18
+_about.scss:19
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
@@ -104,4 +104,4 @@ _about.scss:18
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$trout\".\A         on line 18 of _about.scss\A \A 13: 			justify-content:space-around;\A 14: 			align-items:flex-start;\A 15: 			img{\A 16: 				width:15vw;\A 17: 				border-radius:100%;\A 18: 				box-shadow:1px 1px 12px $trout;\A 19: 			}\A 20: 			h1{\A 21: 				font-family: 'Julius Sans One', sans-serif;\A 22: 								/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1eaaf1+0,1eaaf1+23,99d2ef+86,d7e7ef+100 */\A 23: 				background: rgb(30,170,241); /* Old browsers */"; }
+  content: "Error: Undefined variable: \"$trout\".\A         on line 19 of _about.scss\A \A 14: 			align-items:flex-start;\A 15: \A 16: 			img{\A 17: 				width:15vw;\A 18: 				border-radius:100%;\A 19: 				box-shadow:1px 1px 12px $trout;\A 20: 				border:2px white solid;\A 21: 			}\A 22: 			h1{\A 23: 				font-family: 'Julius Sans One', sans-serif;\A 24: 				background:$op-blue;"; }
