--- a/public/css/_home.scss
+++ b/public/css/_home.scss
@@ -1,7 +1,7 @@
 ui-view{
 	width:100vw;
 	#home{
-		width:100vw;
+		margin:0 auto;
 		.container{
 			display:flex;
 			flex-direction:column-reverse;
