--- a/public/css/_queries.scss
+++ b/public/css/_queries.scss
@@ -225,17 +225,17 @@
 @media only screen and (min-width: 769px){
 	ui-view{
 		#home{
-			width:100vw;
+			width:80vw;
 
 			.post{
 				float:left;
 				display:flex;
 				flex-direction:column;
-				width:60vw;
+				width:40vw;
 				margin: 0 5vw 2vh 5vw;
 				img{
 					margin:0 auto;
-					width:60vw;
+					width:40vw;
 				}
 				article{
 					p{
@@ -245,30 +245,35 @@
 				}
 			}
 			#aboutMe{
-				width:30vw;
-				padding-right:5vw;
+				width:20vw;
+				padding-right:0;
 				float:right;
 				header{
 					margin:0 auto;
-					width:25vw;
+					width:20vw;
 					text-align:center;
+					background:white;
 				}
 				article{
-					width:25vw;
+					width:20vw;
 					margin:0 auto;
 					display:flex;
-					flex-direction:column;
+
 					align-items:center;
 					justify-content:space-around;
 					img{
-						width:25vw;
+						width:5vw;
 					}
 					a, a:visited, a:hover{
 						color:black;
+						p{
+							width:12vw;
+							background:white;
+						}
 					}
 					p{
 						padding:2vh 0;
-						font-size:1em;
+						font-size:.8em;
 						text-align:center;
 						margin-bottom:1vh;
 					}
