--- a/public/css/_about.css
+++ b/public/css/_about.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$trout".
-        on line 19 of _about.scss
+        on line 22 of _about.scss
 
-14: 			align-items:flex-start;
-15: 
-16: 			img{
-17: 				width:15vw;
-18: 				border-radius:100%;
-19: 				box-shadow:1px 1px 12px $trout;
-20: 				border:2px white solid;
-21: 			}
-22: 			h1{
-23: 				font-family: 'Julius Sans One', sans-serif;
-24: 				background:$op-blue;
+17: 				justify-content:space-around;
+18: 				align-items:flex-start;
+19: 				img{
+20: 					width:40vw;
+21: 					border-radius:100%;
+22: 					box-shadow:1px 1px 12px $trout;
+23: 					border:2px white solid;
+24: 				}
+25: 				section{
+26: 					article{
+27: 						margin:0 auto;
 
 Backtrace:
-_about.scss:19
+_about.scss:22
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
@@ -80,6 +80,20 @@ _about.scss:19
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:515:in `visit_media'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:159:in `visit'
@@ -104,4 +118,4 @@ _about.scss:19
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$trout\".\A         on line 19 of _about.scss\A \A 14: 			align-items:flex-start;\A 15: \A 16: 			img{\A 17: 				width:15vw;\A 18: 				border-radius:100%;\A 19: 				box-shadow:1px 1px 12px $trout;\A 20: 				border:2px white solid;\A 21: 			}\A 22: 			h1{\A 23: 				font-family: 'Julius Sans One', sans-serif;\A 24: 				background:$op-blue;"; }
+  content: "Error: Undefined variable: \"$trout\".\A         on line 22 of _about.scss\A \A 17: 				justify-content:space-around;\A 18: 				align-items:flex-start;\A 19: 				img{\A 20: 					width:40vw;\A 21: 					border-radius:100%;\A 22: 					box-shadow:1px 1px 12px $trout;\A 23: 					border:2px white solid;\A 24: 				}\A 25: 				section{\A 26: 					article{\A 27: 						margin:0 auto;"; }
