--- a/public/index.pug
+++ b/public/index.pug
@@ -9,7 +9,8 @@ html(lang='en', ng-app="app")
 		link(href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web", rel="stylesheet")
 		link(href="https://fonts.googleapis.com/css?family=Julius+Sans+One|VT323", rel="stylesheet")
 		link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")
-	body
+		link(href="./css/tingle.css");
+	body(ng-controller="ctrl")
 		header#mainHeader
 			h1 Climbing the Mountai
 				span(ng-click="makePost()") n
@@ -32,6 +33,8 @@ html(lang='en', ng-app="app")
 		ui-view
 
 
+		//tingle
+		script(type="text/javascript", src="./js/tingle.js")
 		// Angular Cdn
 		script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js")
 		// Ui-router Cdn
