mis morning push

--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -12,17 +12,16 @@
     </header>
     <section class="body">
       <article>
-        <ul>
-          <li>
-            <h4>GitHub</h4>
-          </li>
-          <li>
-            <h4>Linkedin</h4>
-          </li>
-          <li>
-            <h4>CodeWars</h4>
-          </li>
-        </ul>
+        <ul><a href="https://github.com/echoflame14" title="GitHub">
+            <li>
+              <h4>GitHub</h4>
+            </li></a><a href="https://www.linkedin.com/in/josh-peterson-b9093910b" title="Linkedin">
+            <li>
+              <h4>Linkedin</h4>
+            </li></a><a href="https://twitter.com/joshpdev" title="Twitter">
+            <li>
+              <h4>Twitter</h4>
+            </li></a></ul>
       </article>
     </section>
   </div>
