--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -11,12 +11,15 @@
 		section.body
 			article
 				ul
-					li
-						h4 GitHub
-					li
-						h4 Linkedin
-					li
-						h4 CodeWars
+					a(href='https://github.com/echoflame14', title="GitHub")
+						li
+							h4 GitHub
+					a(href="https://www.linkedin.com/in/josh-peterson-b9093910b", title="Linkedin")
+							li
+								h4 Linkedin
+					a(href="https://twitter.com/joshpdev", title="Twitter")
+						li
+							h4 Twitter
 
 
 
